syntax = "proto3";

package rivet.backend.pkg.game.namespace_resolve_name_id;

import "resources/legacy/proto/common.proto";

message Request {
	rivet.common.Uuid game_id = 1;
	repeated string name_ids = 2;
}

message Response {
	message Namespace {
		string name_id = 1;
		rivet.common.Uuid namespace_id = 2;
	}

	repeated Namespace namespaces = 1;
}
